Terminato il grafico madonna che caisno aito
