# src/app/api/models.ts
@@ -7,6 +7,7 @@ export { CredentialDto } from './models/credential-dto';
 export { ExpenseDto } from './models/expense-dto';
 export { LoginRequest } from './models/login-request';
 export { OperationDto } from './models/operation-dto';
+export { PriceHistoryObj } from './models/price-history-obj';
 export { RevenueDto } from './models/revenue-dto';
 export { ThirdParty } from './models/third-party';
 export { ThirdPartyDto } from './models/third-party-dto';
